--- a/ribbit-front/src/index.css
+++ b/ribbit-front/src/index.css
@@ -1,7 +1,12 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 /* a태그 하이라이트 숨기기 */
-a:link { color: red; text-decoration: none;}
-a:visited { color: black; text-decoration: none;}
-a:hover { color: blue; text-decoration: underline;}
+a:link { color: none; text-decoration: none;}
+a:visited { color: none; text-decoration: none;}
+a:hover { color: none; text-decoration: none;}
 
 /* flex filter */
 .filter {
