--- a/ribbit-front/src/App.css
+++ b/ribbit-front/src/App.css
@@ -10,3 +10,10 @@ body {
   font-family: 'NanumSquare', sans-serif;
   font-size: 16px;
 }
+
+.header__background {
+  width: 100%;
+  height: 67px;
+  position: relative;
+  z-index: -9999;
+}
