--- a/ribbit-front/src/App.css
+++ b/ribbit-front/src/App.css
@@ -6,8 +6,8 @@
 /* bolder     { font-weight: 800 } */
 /* light      { font-weight: 300 } */
 
-body { 
-  font-family: 'NanumSquare', sans-serif;
+body {
+  font-family: "NanumSquare", sans-serif;
   font-size: 16px;
 }
 
