--- a/ribbit-front/src/components/default layout/Header.css
+++ b/ribbit-front/src/components/default layout/Header.css
@@ -1,30 +1,30 @@
 .topbar {
   width: 100%;
   height: 67px;
-  background-color: #E8F5E9;
-  border-bottom: solid 1px #CAE4CC;
+  background-color: #e8f5e9;
+  border-bottom: solid 1px #cae4cc;
   display: flex;
   position: fixed;
   justify-content: center;
 }
 
 .topbar-content {
-  width : 92%;
+  width: 92%;
   display: flex;
   align-items: center;
 }
 
 .navigation {
-  width : 118px;
+  width: 118px;
   height: calc(100% - 4px);
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 24px;
-  color : #84D687; /* import로 색깔 불러오고 대체 - 더 진한색 xd참고 */
-  border-bottom: 4px solid #84D687; /* import로 색깔 불러오고 대체 - 더 진한색 xd참고 */
+  color: #84d687; /* import로 색깔 불러오고 대체 - 더 진한색 xd참고 */
+  border-bottom: 4px solid #84d687; /* import로 색깔 불러오고 대체 - 더 진한색 xd참고 */
   cursor: pointer;
-  transition: color 0.2s border 0.2s
+  transition: color 0.2s border 0.2s;
 }
 
 .navigation .fa-home {
@@ -44,7 +44,7 @@
 }
 
 .features {
-  width : 118px;
+  width: 118px;
   height: 56px;
   display: flex;
   font-size: 50px;
@@ -54,7 +54,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #DEE2E6;
+  background-color: #dee2e6;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -62,26 +62,26 @@
   cursor: pointer;
 }
 .header__profile .user__profile {
-  color : #A5D6A7 /* import로 색깔 불러오고 대체 */
+  color: #a5d6a7; /* import로 색깔 불러오고 대체 */
 }
 
 .features .header__ribbit {
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  background-color: #A5D6A7;  /* import로 색깔 불러오고 대체 */
+  background-color: #a5d6a7; /* import로 색깔 불러오고 대체 */
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   transition: background-color 0.2s;
   cursor: pointer;
 }
 
 .features .header__ribbit:hover {
-  background-color: #84D687;  /* import로 색깔 불러오고 대체 - 더 진한색. xd참고 */
+  background-color: #84d687; /* import로 색깔 불러오고 대체 - 더 진한색. xd참고 */
 }
 
 .header__ribbit .ribbit__text {
   font-size: 18px;
-  color : #FFF;
+  color: #fff;
 }
