--- a/ribbit-front/src/components/defaultLayout/css/RibbitContainer.css
+++ b/ribbit-front/src/components/defaultLayout/css/RibbitContainer.css
@@ -1,10 +1,40 @@
 .Ribbit__Modal {
-  border-radius: 2%;
-  width: 44%x;
-  height: 230px;
+  width: 44%;
+  height: 32%;
   position: relative;
   top: 7%;
-  border: 1px solid black;
-  background: black;
+  border-radius: 25px;
   z-index: 4001;
+  background-color: white;
+}
+
+.Ribbit__Header {
+  border-radius: 25px 25px 0 0;
+  font-size: 24px;
+  width: 100%;
+  height: 25%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Ribbit__Header .RibbitHeader__Content {
+  font-size: 28px;
+  width: calc(100% - 24px);
+  height: calc(100% - 24px);
+  text-align: center;
+}
+
+.RibbitHeader__Content .HeaderContent__Close {
+  float: right;
+}
+
+.Ribbit__body {
+  border-radius: 0 0 25px 25px;
+  width: 100%;
+  height: 74%;
+  border-top: 2px solid #a5d6a7;
+  background-color: #a5d6a7;
+  background: rgba(165, 214, 167, 0.6);
 }
