--- a/ribbit-front/src/index.css
+++ b/ribbit-front/src/index.css
@@ -4,12 +4,26 @@ body {
 }
 
 /* a태그 하이라이트 숨기기 */
-a:link { color: none; text-decoration: none;}
-a:visited { color: none; text-decoration: none;}
-a:hover { color: none; text-decoration: none;}
+a:link {
+  color: none;
+  text-decoration: none;
+}
+a:visited {
+  color: none;
+  text-decoration: none;
+}
+a:hover {
+  color: none;
+  text-decoration: none;
+}
 
 /* flex filter */
 .filter {
   -ms-flex-positive: 1;
   flex-grow: 1;
+}
+
+/* focus되는 테그들의 클릭 시 하이라이트 제거 */
+*:focus {
+  outline: none;
 }
