--- a/ribbit-front/src/components/Main/ColorSelector/css/ColorSelector.css
+++ b/ribbit-front/src/components/Main/ColorSelector/css/ColorSelector.css
@@ -1,5 +1,68 @@
-.MainContent__ColorSelctor {
+.MainContent__ColorSelector {
   background: black;
   width: 400px;
   height: 500px;
+}
+
+.MainContent__ColorSelector .ColorSelector__HeaderContainer {
+  height: 245px;
+  border-bottom: 15px solid #fff;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background: #84d687;
+}
+
+.ColorSelector__HeaderContainer .HeaderContainer__Title {
+  color: #fff;
+  font-size: 28px;
+  margin: 8px;
+}
+
+.ColorSelector__HeaderContainer .HeaderContainer__Colors {
+  width: 100%;
+  height: 200px;
+  border-top: 1px solid #fff;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  background-color: #c9d4c9;
+}
+
+.HeaderContainer__Colors .ColorSelector__Color {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #fff;
+  border-radius: 60px;
+  margin-right: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.HeaderContainer__Colors .Color__PlusChild {
+  display: none;
+}
+
+.HeaderContainer__Colors .ColorSelector__Color:nth-child(1),
+.HeaderContainer__Colors .ColorSelector__Color:nth-child(5) {
+  margin-left: 40px;
+}
+
+.HeaderContainer__Colors .ColorSelector__Color:nth-last-child(1) {
+  margin-left: 57px;
+  margin-right: auto;
+  background-color: gray;
+}
+
+.HeaderContainer__Colors
+  .ColorSelector__Color:nth-last-child(1)
+  .Color__PlusChild {
+  display: inline;
 }
