--- a/ribbit-front/src/index.css
+++ b/ribbit-front/src/index.css
@@ -9,6 +9,13 @@ a {
   cursor: pointer;
 }
 
+/* 리스트 관련 태그 초기화 */
+ul,
+ol,
+li {
+  all: unset;
+}
+
 /* flex filter */
 .filter {
   -ms-flex-positive: 1;
