UPDATE : 색 선택시 색 변경

--- a/ribbit-front/src/components/Main/ColorSelector/css/ColorSelector.css
+++ b/ribbit-front/src/components/Main/ColorSelector/css/ColorSelector.css
@@ -128,7 +128,7 @@
   position: absolute;
   font-size: 18px;
   color: #fff;
-  background: #84d687;
+  background: #000;
 }
 
 .BodyContainer__List .BodyList__item:nth-child(7):hover::before,
@@ -137,5 +137,5 @@
   position: absolute;
   font-size: 18px;
   color: #fff;
-  background: #84d687;
+  background: #000;
 }
