--- a/ribbit-front/src/components/defaultLayout/css/Header.css
+++ b/ribbit-front/src/components/defaultLayout/css/Header.css
@@ -49,6 +49,7 @@
   height: 56px;
   display: flex;
   font-size: 50px;
+  position: relative;
 }
 
 .features .header__profile {
@@ -80,6 +81,35 @@
 
 .features .header__ribbit:hover {
   background-color: #84d687; /* import로 색깔 불러오고 대체 - 더 진한색. xd참고 */
+}
+
+.features .user__dropDown {
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  font-size: 22px;
+  background: #fff;
+  width: 100px;
+  height: 112px;
+  margin-left: -50px;
+  margin-top: 52px;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
+}
+
+.user__dropDown .userDropDown__Content {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+}
+
+.user__dropDown .userDropDown__Content:hover {
+  background: #cae4cc;
 }
 
 .header__ribbit .ribbit__text {
