--- a/ribbit-front/src/components/defaultLayout/css/Search.css
+++ b/ribbit-front/src/components/defaultLayout/css/Search.css
@@ -3,5 +3,35 @@
 }
 
 .Header__Search--On {
+  display: block;
+  position: absolute;
+  border: 1px solid rgb(201, 201, 201);
+  width: 300px;
+  height: 50px;
+  margin-left: -340px;
+  border-radius: 50px;
+  overflow: hidden;
+}
+
+.Header__Search--On .Search__Container {
+  width: 100%;
+  height: 50px;
+  /* padding: 0 18px; */
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Search__Container .SearchContainer__Input {
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  padding: 20px;
+  background: transparent;
+  border: none;
+}
+
+.Search__Container .SearchContainer__Icon {
+  margin-right: 10px;
+  cursor: pointer;
 }
