--- a/ribbit-front/src/components/Search/css/SearchComponent.css
+++ b/ribbit-front/src/components/Search/css/SearchComponent.css
@@ -1,3 +1,51 @@
 .SearchContainer {
   width: 100%;
 }
+
+.SearchContainer .SearchNavigation {
+  width: 100%;
+  height: 200px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
+}
+
+.SearchNavigation .SearchNavigation__UserName {
+  width: 100%;
+  height: 110px;
+  background: #84d687;
+  display: flex;
+  align-items: center;
+  font-size: 22px;
+  color: #fff;
+}
+
+.SearchNavigation__UserName .SearchNavigationUserName__Title {
+  margin: 0 4%;
+}
+
+.SearchNavigation .SearchNavigation__TextData {
+  width: 100%;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  color: gray;
+  font-size: 16px;
+}
+
+.SearchNavigation__TextData .SearchNavigationTextData__Title {
+  margin: 0 4%;
+}
+
+.SearchContainer .SearchBody {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.SearchBody .SearchBody__Content {
+  width: 1500px;
+  margin-top: 60px;
+  background: #fafafa;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 30px;
+}
