ADD: 프로필 수정 버튼 추가

--- a/ribbit-front/src/container/MyPage/css/Follow.css
+++ b/ribbit-front/src/container/MyPage/css/Follow.css
@@ -1,7 +1,7 @@
 .follow__profile {
     display: inline-block;
     width: 400px;
-    background-color: #d0ddd0;
+    background-color: #e1ede1;
     padding: 15px;
 }
 
