--- a/ribbit-front/src/container/MyPage/css/MyPage.css
+++ b/ribbit-front/src/container/MyPage/css/MyPage.css
@@ -1,3 +1,13 @@
 .my-page {
     display: flex;
+    margin-top: -220px;
+}
+
+.user-info {
+    flex: 2;
+    padding-left: 80px;
+}
+
+.page-content {
+    flex: 8;
 }
