--- a/ribbit-front/src/components/Search/css/SearchDataView.css
+++ b/ribbit-front/src/components/Search/css/SearchDataView.css
@@ -4,6 +4,7 @@
   background: #fff;
   margin: 10px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
 .SearchBodyContent__Item:hover {
@@ -40,12 +41,12 @@
   width: 100%;
   height: 70px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 22px;
-  color: #929292;
 }
 
-.SearchBodyContent__NameLabel .SearchBodyContentBameLabel__Name {
-  color: #929292;
+.SearchBodyContent__NameLabel .SearchBodyContentNameLabel__Id {
+  color: #afafaf;
 }
