UPDATE : 뷰 업데이트

--- a/ribbit-front/src/components/Main/Posts/css/MainRibbit.css
+++ b/ribbit-front/src/components/Main/Posts/css/MainRibbit.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .MainPosts__MainRibbit > .MainRibbit__Content {
