--- a/ribbit-front/src/components/MyPage/Profile/css/Profile.css
+++ b/ribbit-front/src/components/MyPage/Profile/css/Profile.css
@@ -28,12 +28,21 @@
 .info-elements {
     display: inline-block;
     position: relative;
+    padding: 5px;
+    top: 15px;
+    width: 150px;
+}
+
+.edit-button {
+    display: inline-block;
+    position: relative;
+    padding: 5px;
     top: 15px;
     width: 150px;
 }
 
 .info-elements:hover {
-    border-bottom: 5px solid #84d687;
+    border-bottom: 6px solid #c6ddc6;
 }
 
 .info-name {
@@ -49,4 +58,20 @@
     margin: 0;
     text-align: center;
     font-size: 30pt;
+}
+
+.edit-or-follow {
+    display: inline-block;
+    border: 1px solid #506850;
+    padding: 20px;
+    position: relative;
+    margin-left: 20px;
+    bottom: 15px;
+    font-size: 15pt;
+    width: 150px;
+    border-radius: 30px;
+}
+
+.edit-or-follow:hover {
+    background-color: #e5efe5;
 }
