ADD: MainProfile에 follower, following 수 서버값 전달

--- a/ribbit-front/src/components/MyPage/Profile/css/UserInfo.css
+++ b/ribbit-front/src/components/MyPage/Profile/css/UserInfo.css
@@ -7,6 +7,12 @@
     color: darkgray;
 }
 
+.user-introduction {
+    display: inline-block;
+    font-size: 15pt;
+    padding-top: 20px;
+}
+
 .user-address:hover {
     text-decoration: underline;
 }
