--- a/ribbit-front/src/components/Main/Profile/css/Profile.css
+++ b/ribbit-front/src/components/Main/Profile/css/Profile.css
@@ -31,6 +31,8 @@
   display: block;
   font-size: 40px;
   color: #fff;
+  width: 40px;
+  height: 40px;
 }
 
 .MainProfile__Body .ProfileBody__UserData {
