--- a/ribbit-front/src/components/Main/Posts/css/MainRibbit.css
+++ b/ribbit-front/src/components/Main/Posts/css/MainRibbit.css
@@ -31,6 +31,11 @@
 .MainRibbitContent__UserProfileCover .MainRibbitContent__UserProfile {
   font-size: 50px;
   color: #a5d6a7;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .MainRibbit__Content .MainRibbitContent__InputCover {
