--- a/ribbit-front/src/components/defaultLayout/css/Header.css
+++ b/ribbit-front/src/components/defaultLayout/css/Header.css
@@ -67,6 +67,11 @@
 }
 .header__profile .user__profile {
   color: #a5d6a7;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .features .header__ribbit {
